# understand-binary

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-23-understand-binary-design.md
skill/: understand-binary.md
src/agents/: base.py  function_namer.py  layer_classifier.py  summarizer.py  tour_builder.py
src/cli/: main.py
src/core/: graph.py  llm.py  orchestrator.py  plugin.py
src/loaders/: base.py  rizin_loader.py
src/viewer/: index.html  package-lock.json  package.json
src/viewer/src/: App.css  App.tsx  DetailPanel.tsx  GraphView.tsx  SearchBar.tsx  TourMode.tsx  types.ts
